--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -1,7 +1,8 @@
 .Forecast{
   text-align: center;
   background: linear-gradient(to bottom,  aliceblue 50%, #E7E9EB );
-    padding: 4px;
+  border-radius: 5px;  
+  padding: 4px;
     margin-top: 2px;
     color: #493240;
   }
