--- a/src/Weather.css
+++ b/src/Weather.css
@@ -10,7 +10,7 @@
   color: aliceblue;
 }
 .Weather .submit-button {
-  background:#E7E9EB;
+  background:aliceblue;
   border: 2px solid black;
   border-radius: 4px;
   padding: 6px;
