change button border color

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,7 +11,7 @@
 }
 .Weather .submit-button {
   background:aliceblue;
-  border: 2px solid black;
+  border: 2px solid #493240;
   border-radius: 4px;
   padding: 6px;
   padding-left: 10px;
