--- a/src/Weather.css
+++ b/src/Weather.css
@@ -73,8 +73,8 @@ margin-bottom: 5px;
     margin-bottom: 10px;
   }
  
-  .Weather .humidity-wind {
-    column-width: 30px;
+  .Weather .humidity, .wind {
+    font-size: 10pt;
   }
 
   
